--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,10 +1,17 @@
 {
-  "TRANSACTIONS_TITLE": "Transacciones",
+    "TRANSACTIONS_TITLE": "Transactions",
   "INCOMES": "Incomes",
   "EXPENSES": "Expenses",
   "BALANCE": "Balance",
   "DELETE": "Delete",
   "SHARE": "Share",
+  "FILTER": "Filter",
+  "APPLY": "Apply",
+  "INITIAL_DATE": "Initial Date",
+  "FINAL_DATE": "Final Date",
+  "DASHBOARD": "DashBoard",
+  "STACK_EXPENSES": "Stack Expenses",
+  "PERCENTAGE": "Percentage",
   "EXPORT_TITTLE": "Exporting current range of expenses",
   "EXPORT_QUESTION": "Are you want to export the selected range of expenses ?",
   "CANCEL": "Cancel",
@@ -14,5 +21,23 @@
   "DESCRIPTION": "Description",
   "CHOOSE_COLOR": "Choose Color",
   "CATEGORY_CAN_NOT_DELETED": "Category can´t be deleted!",
-  "CATEGORY_CAN_NOT_DELETED_DESC": "Because it is being used by other modules!"
+  "CATEGORY_CAN_NOT_DELETED_DESC": "Because it is being used by other modules!",
+  "RECIEPT": "Here is the Reciept!",
+  "DATE": "Fecha",
+  "AMOUNT": "cantidad",
+  "INCOMING": "Ingreso",
+  "QUESTION_DELETE_RECIEPT": "Are you sure you want to delete this expense: ",
+  "BUDGETS": "Budgets",
+  "BUDGET": "Budget",
+  "EXECUTED": "Executed",
+  "QUESTION_DELETE_BUDGET": "Are you sure you want to delete this Budget ?",
+  "SAVINGS": "Savings",
+  "CUMULATED": "Cumulated",
+  "DETAILS": "Details",
+  "WITHDRAWALS": "Withdrawals",
+  "INSERT_AMOUNT_INCOMING": "Please enter the amount to be consigned.",
+  "SAVE": "Save",
+  "INSERT_AMOUNT_WITHDRAWS": "Please enter the amount to be withdraw.",
+  "JUSTIFICATION": "Justification",
+  "QUESTION_DELETE_SAVING": "Are you want to delete this saving : "
 }
