--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -16,10 +16,28 @@
   "EXPORT_QUESTION": "Desea exportar el rango de gastos seleccionados ?",
   "CANCEL": "Cancelar",
   "CONFIRM": "Confirmar",
-  "CATEGORY_TITLE": "CategorÍa",
+  "CATEGORY_TITLE": "Categoría",
   "NAME": "Nombre",
   "DESCRIPTION": "Descripción",
   "CHOOSE_COLOR": "Escoger color",
   "CATEGORY_CAN_NOT_DELETED": "La Categoría no puede ser eliminada!",
-  "CATEGORY_CAN_NOT_DELETED_DESC":"Porque está siendo usada por otros módulos!"
+  "CATEGORY_CAN_NOT_DELETED_DESC":"Porque está siendo usada por otros módulos!",
+  "DATE": "Fecha",
+  "AMOUNT": "cantidad",
+  "INCOMING": "Ingreso",
+  "RECIEPT": "Aquí está su recibo!",
+  "QUESTION_DELETE_RECIEPT": "Desea Eleminar este gasto: ",
+  "BUDGETS": "Presupuestos",
+  "BUDGET": "Presupuesto",
+  "EXECUTED": "Executado",
+  "QUESTION_DELETE_BUDGET": "Desea Eliminar este presupuesto ?",
+  "SAVINGS": "Ahorros",
+  "CUMULATED": "Acumulado",
+  "DETAILS": "Detalles",
+  "WITHDRAWALS": "Retiros",
+  "INSERT_AMOUNT_INCOMING": "Por favor ingrese la suma de dinero a ser consignada.",
+  "SAVE": "Guardar",
+  "INSERT_AMOUNT_WITHDRAWS": "Por favor ingrese la suma de dinero a ser retirada.",
+  "JUSTIFICATION": "Justificación",
+  "QUESTION_DELETE_SAVING": " Desea Eliminar este ahorro: "
 }
