--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,6 +49,9 @@
   "EXECUTED_BUDGET":" Executed Budget",
   "QUESTION_CONTINUE": "Do you want to continue ?",
   "NEW_EXPENSE" : "New Expense",
-  "TARGET": "Target"
-
+  "TARGET": "Target",
+  "MOVEMENT_CREATED": "Movement Created",
+  "AMOUNT_TO_WITHDRAW" :"Cantidad a Retirar",
+  "AMOUNT_TO_CONSIGN" : "Amounto to Consign",
+  "GREAT": "Great!"
 }
