--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -21,7 +21,7 @@
   "DESCRIPTION": "Descripción",
   "CHOOSE_COLOR": "Escoger color",
   "CATEGORY_CAN_NOT_DELETED": "La Categoría no puede ser eliminada!",
-  "CATEGORY_CAN_NOT_DELETED_DESC":"Porque está siendo usada por otros módulos!",
+  "CATEGORY_CAN_NOT_DELETED_DESC": "Porque está siendo usada por otros módulos!",
   "DATE": "Fecha",
   "AMOUNT": "Cantidad",
   "INCOMING": "Ingreso",
@@ -41,17 +41,20 @@
   "JUSTIFICATION": "Justificación",
   "QUESTION_DELETE_SAVING": " Desea Eliminar este ahorro: ",
   "SELECT_IMAGE": "Seleccionar Imágen",
-  "CHOOSE_CATEGORY":"Seleccionar Categoría",
+  "CHOOSE_CATEGORY": "Seleccionar Categoría",
   "SOURCE_IMAGE": "Fuente de la imágen",
   "LOAD_LIBRARY": "Cargar desde la Librería",
   "USE_CAMERA": "Usar Cámara",
   "QUESTION_DELETE_EXPENSE": "Desea eliminar el Reporte de Gasto Actual ?",
-  "EXECUTED_BUDGET":" Executed Budget",
+  "EXECUTED_BUDGET": " Executed Budget",
   "QUESTION_CONTINUE": "Do you want to continue ?",
-  "NEW_EXPENSE" : "Nuevo Gasto",
+  "NEW_EXPENSE": "Nuevo Gasto",
   "TARGET": "Objetivo",
   "MOVEMENT_CREATED": "Movimiento Creado",
-  "AMOUNT_TO_WITHDRAW" :"Cantidad a Retirar",
-  "AMOUNT_TO_CONSIGN" : "Cantidad a Consignar",
-  "GREAT": "Genial!"
+  "AMOUNT_TO_WITHDRAW": "Cantidad a Retirar",
+  "AMOUNT_TO_CONSIGN": "Cantidad a Consignar",
+  "GREAT": "Genial!",
+  "CREDITS": "Créditos",
+  "SETTINGS": "Configuración",
+  "LANGUAGE": "Idioma"
 }
