--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-    "TRANSACTIONS_TITLE": "Transactions",
+  "TRANSACTIONS_TITLE": "Transactions",
   "INCOMES": "Incomes",
   "EXPENSES": "Expenses",
   "BALANCE": "Balance",
@@ -41,17 +41,20 @@
   "JUSTIFICATION": "Justification",
   "QUESTION_DELETE_SAVING": "Are you want to delete this saving : ",
   "SELECT_IMAGE": "Select Image",
-  "CHOOSE_CATEGORY":"Choose Category",
+  "CHOOSE_CATEGORY": "Choose Category",
   "SOURCE_IMAGE": "Image Source",
   "LOAD_LIBRARY": "Load from Library",
   "USE_CAMERA": "Use Camera",
   "QUESTION_DELETE_EXPENSE": "Do you want to delete the current Expense ?",
-  "EXECUTED_BUDGET":" Executed Budget",
+  "EXECUTED_BUDGET": " Executed Budget",
   "QUESTION_CONTINUE": "Do you want to continue ?",
-  "NEW_EXPENSE" : "New Expense",
+  "NEW_EXPENSE": "New Expense",
   "TARGET": "Target",
   "MOVEMENT_CREATED": "Movement Created",
-  "AMOUNT_TO_WITHDRAW" :"Cantidad a Retirar",
-  "AMOUNT_TO_CONSIGN" : "Amounto to Consign",
-  "GREAT": "Great!"
+  "AMOUNT_TO_WITHDRAW": "Amount to Withdraw",
+  "AMOUNT_TO_CONSIGN": "Amount to Consign",
+  "GREAT": "Great!",
+  "CREDITS": "Credits",
+  "SETTINGS": "Settings",
+  "LANGUAGE": "Language"
 }
