--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,7 @@
   "CANCEL": "Cancel",
   "CONFIRM": "Confirm",
   "CATEGORY_TITLE": "Category",
+  "CATEGORIES": "Categories",
   "NAME": "Name",
   "DESCRIPTION": "Description",
   "CHOOSE_COLOR": "Choose Color",
