--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,6 +17,7 @@
   "CANCEL": "Cancelar",
   "CONFIRM": "Confirmar",
   "CATEGORY_TITLE": "Categoría",
+  "CATEGORIES": "Categorías",
   "NAME": "Nombre",
   "DESCRIPTION": "Descripción",
   "CHOOSE_COLOR": "Escoger color",
