--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "APPLY": "Apply",
   "INITIAL_DATE": "Initial Date",
   "FINAL_DATE": "Final Date",
-  "DASHBOARD": "DashBoard",
+  "DASHBOARD": "Dashboard",
   "STACK_EXPENSES": "Stack Expenses",
   "PERCENTAGE": "Percentage",
   "EXPORT_TITTLE": "Exporting current range of expenses",
