--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,9 +24,9 @@
   "CATEGORY_CAN_NOT_DELETED": "Category can´t be deleted!",
   "CATEGORY_CAN_NOT_DELETED_DESC": "Because it is being used by other modules!",
   "RECIEPT": "Here is the Reciept!",
-  "DATE": "Fecha",
-  "AMOUNT": "cantidad",
-  "INCOMING": "Ingreso",
+  "DATE": "Date",
+  "AMOUNT": "Amount",
+  "INCOMING": "Incoming",
   "QUESTION_DELETE_RECIEPT": "Are you sure you want to delete this expense: ",
   "BUDGETS": "Budgets",
   "BUDGET": "Budget",
@@ -57,5 +57,6 @@
   "GREAT": "Great!",
   "CREDITS": "Credits",
   "SETTINGS": "Settings",
-  "LANGUAGE": "Language"
+  "LANGUAGE": "Language",
+  "WARNING": "Warning"
 }
