--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,5 +58,7 @@
   "CREDITS": "Credits",
   "SETTINGS": "Settings",
   "LANGUAGE": "Language",
-  "WARNING": "Warning"
+  "WARNING": "Warning",
+  "MONTHNAMES": ["January","February","March","April","May","June","July","August","September","October","November","December"],
+  "MONTHSHORTNAMES" : ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"]
 }
