--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -58,5 +58,7 @@
   "CREDITS": "Créditos",
   "SETTINGS": "Configuración",
   "LANGUAGE": "Idioma",
-  "WARNING": "Precaución"
+  "WARNING": "Precaución",
+  "MONTHNAMES": ["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"],
+  "MONTHSHORTNAMES" : ["Ene","Feb","Mar","Abr","May","Jun","Jul","Ago","Sep","Oct","Nov","Dic"]
 }
