--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -59,6 +59,36 @@
   "SETTINGS": "Configuración",
   "LANGUAGE": "Idioma",
   "WARNING": "Precaución",
-  "MONTHNAMES": ["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"],
-  "MONTHSHORTNAMES" : ["Ene","Feb","Mar","Abr","May","Jun","Jul","Ago","Sep","Oct","Nov","Dic"]
+  "MONTHNAMES": [
+    "Enero",
+    "Febrero",
+    "Marzo",
+    "Abril",
+    "Mayo",
+    "Junio",
+    "Julio",
+    "Agosto",
+    "Septiembre",
+    "Octubre",
+    "Noviembre",
+    "Diciembre"
+  ],
+  "MONTHSHORTNAMES": [
+    "Ene",
+    "Feb",
+    "Mar",
+    "Abr",
+    "May",
+    "Jun",
+    "Jul",
+    "Ago",
+    "Sep",
+    "Oct",
+    "Nov",
+    "Dic"
+  ],
+  "REPORT_TITLE_EXPORT": "Este es su informe de gastos actuales",
+  "REPORT_TITLE_BODY": "Este archivo contiene todos los datos relacionados con los gastos por categoría",
+  "EMAIL_ME_TITLE": "Me gustaría contratarte para un proyecto interesante!",
+  "EMAIL_ME_BODY": "Cuéntame más acerca del proyecto..."
 }
