Single sign in Google and Facebook

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,7 @@
   "APPLY": "Aplicar",
   "INITIAL_DATE": "Fecha Inicial",
   "FINAL_DATE": "Fecha Final",
-  "DASHBOARD": "Tablero",
+  "DASHBOARD": "Panel",
   "STACK_EXPENSES": "Pila de Gastos",
   "PERCENTAGE": "Porcentaje",
   "EXPORT_TITTLE": "Exportar el rango de gastos actuales",
