--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,5 +90,6 @@
   "REPORT_TITLE_EXPORT": "This is you current expenses report",
   "REPORT_TITLE_BODY": "This file contains all data related with the expenses by category",
   "EMAIL_ME_TITLE": "I  would like to hire you for an interesting project!",
-  "EMAIL_ME_BODY": "Tell me more about your project..."
+  "EMAIL_ME_BODY": "Tell me more about your project...",
+  "CLOSE_SESSION": "Close session"
 }
