--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -91,5 +91,8 @@
   "REPORT_TITLE_BODY": "Este archivo contiene todos los datos relacionados con los gastos por categoría",
   "EMAIL_ME_TITLE": "Me gustaría contratarte para un proyecto interesante!",
   "EMAIL_ME_BODY": "Cuéntame más acerca del proyecto...",
-  "CLOSE_SESSION": "Cerrar Sesión"
+  "CLOSE_SESSION": "Cerrar Sesión",
+  "CALCULATOR": "Calculadora",
+  "SAVING_GOAL": "Objetivo del ahorro",
+  "CHOOSE_DATE": "Escoge la Fecha"
 }
